--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -29,7 +29,13 @@ function hex2a(hexx) {
     return str;
 }
 
+$(document).ready(function() {
+    $('[data-toggle=offcanvas]').click(function() {
+        $('.row-offcanvas').toggleClass('active');
+    });
 
+
+});
 
 function doWork() {
     var EasterEgg = document.getElementById("Easter");
@@ -57,12 +63,6 @@ function doWork() {
         pname.innerHTML += plantname;
     });
     xhr.send();
-
-    $('#menuElement').on('hide.dropdown', function () {
-    	alert("clicked");
-    return false;
-});
-
 }
         </script>
 
@@ -111,67 +111,33 @@ function doWork() {
             <div id="sidebar" class="sidebar-offcanvas">
                 <br /> <br />
                 <div class="col-xs-12">
-                    <h3 style="color:#bcbcbc; text-align: center;" >Your Plants <a id="Leaf"><span class="glyphicon glyphicon-tree-conifer" style="color: #007a2a !important;"></span></a></h3><br/>
+                    <h3 style="color:#bcbcbc; text-align: center;" >Your Plants <a id="Leaf"><span class="glyphicon glyphicon-tree-conifer" style="color: #007a2a !important;">&nbsp;</span></a></h3><br/>
+                    <h4>Groups:</h4>
+
                     <ul class="nav nav-pills nav-stacked">
-                        <h4>Groups:</h4>
-                        <ul class="nav" id="groupsList"><!--Intial start of accordian-->
-
-                        <!--This entire thing is just for the indoors dropdown-->
-                            <li class="dropdown keep-open" id="menuElement">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Indoors<span class="caret" id="menu-caret"></span></a>
-
-                                    <ul id="menuDrop" class="dropdown-menu keep-open collapsed" role="menu">
-
-                                      	<!--Dank Weed-->
-				                        <ul class="nav innerMenu"><li><button id="setting_cog" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="#"> Dank Weed, 90%THC, strong stuff </a></li></ul>
-
-				                        <!--Mystery Plant-->
-				                        <ul class="nav innerMenu"><li>
-				                          	<button data-toggle="collapse" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="#">Mystery Plant</a></li>
-				                        </ul>
-
-				                    </ul>
-				            </li>
-				        <!--End indoors dropdown-->
-                        </ul>
-                        <ul class="nav" id="groupsList"><!--Intial start of accordian-->
-
-                        <!--This entire thing is just for the indoors dropdown-->
-                            <li class="dropdown keep-open" id="menuElement">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Scary Basement<span class="caret" id="menu-caret"></span></a>
-
-                                    <ul id="menuDrop" class="dropdown-menu keep-open collapsed" role="menu">
-
-				                        <ul class="nav innerMenu"><li><button id="setting_cog" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="#"> Dead Twig</a></li>
-                                        </ul>
-
-
-				                        <ul class="nav innerMenu"><li>
-				                          	<button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="#">Venus Flytrap</a></li>
-                                        </ul>
-				                    </ul>
-				            </li>
-				        <!--End indoors dropdown-->
-                        </ul>
-                          	<script>
-
-
-				                           	</script>
-                            <div id="groupsListContainer"></div>
-                            <br/>
-                            <li style="font-size: 12px; float: right;"><a href="settings.html">Manage Groups</a></li>
-                            <li class="plus" style="font-size: 13px; float: left;"><a onclick="showCreateGroup()"><span class="btn glyphicon glyphicon-plus"></span></a></li>
-
-                            <br/><br/>
-
-                            <div id="show_create_group" style="display: none;">
-                                <form action="/create-group" method="post">
-                                    <input type="hidden" value=username name="user" id="uname" />
-                                    <input type="text" class="form-control" id="PlantName" name="groupName" placeholder="new group name" />
-                                    <button id="savebutton" type="submit" class="btn btn-primary" onclick="addGroup()">Create Group</button>
-                                </form>
-                            </div>
-                            <script>
+                        <li>
+                            <ul class="nav" id="groupsList">
+                                <li class="dropdown keep-open">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Indoors<span class="caret">&nbsp;</span></a>
+                                    <ul class="dropdown-menu keep-open" role="menu">
+                                        <li><a href="#">Cara </a></li>
+                                        <li><a href="#">Raspy</a></li>
+                                        <li><a href="#">Bob</a></li>
+                                        <li><p style="color:#bcbcbc; padding: 3px 20px;">No plants in group</p></li>
+                                    </ul>
+                                </li>
+                                <li id="groupsListContainer"></li>
+                                <li style="font-size: 12px; float: right;"><a href="settings.html">Manage Groups</a></li>
+                                <li style="font-size: 20px; float: left;"><a onclick="showCreateGroup()">+</a></li>
+                                <li>
+                                    <div id="show_create_group" style="display: none;">
+                                        <form action="/create-group" method="post">
+                                            <input type="hidden" value=username name="user" id="uname" />
+                                            <input type="text" class="form-control" id="PlantName" name="groupName" placeholder="new group name" />
+                                            <button id="savebutton" type="submit" class="btn btn-primary" onclick="addGroup()">Create Group</button>
+                                        </form>
+                                    </div>
+                                    <script>
 function showCreateGroup() {
     var hidden = document.getElementById('show_create_group');
     if (hidden.style.display === 'block') {
@@ -181,60 +147,29 @@ function showCreateGroup() {
     }
 };
 
-$(document).ready(function() {
-	$('#setting_cog').on('click', function() {
-		$(this).parent('ul').siblings('.dropSettings').slideToggle(300);
-	}); // end click
-});
+function addGroup() {
 
-//Experimental Function to display cog accordinan settings
-function displaySettings(){
-	//alert("This shit is broken");
-	var sets = document.getElementById("dropSettings");
-	if(sets.style.display === 'block'){
-		sets.style.display = 'none';
-	} else {
-		sets.style.display = 'block';
-	}
 };
 
-//These functions keep the dropdown menus open until clicked on again
 $('.dropdown.keep-open').on({
     "shown.bs.dropdown": function() { this.closable = false; },
     "click":             function() { this.closable = true; },
     "hide.bs.dropdown":  function() { return this.closable; }
 });
-$('#menuElement .dropdown-menu').on({
-    "click":function(e){
-      e.stopPropagation();
-    }
-});
-
-//This function will only allow one dropdown open at a time
-$('.dropdown-toggle').click(function(){
-  var currMen = $(this).siblings('.dropdown-menu');
-  $('.dropdown-menu').not(currMen).hide();
-  currMen.toggle();
-});
-
-
-//Toggle sidebar on button press
-$(document).ready(function() {
-    $('[data-toggle=offcanvas]').click(function() {
-        $('.row-offcanvas').toggleClass('active');
-    });
-});
-                            </script>
-
+                                    </script>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
-                        <hr/>
-                        <h4 style="color: #009b09;">All:</h4>
-                        <ul class="nav" style="font-size: 15px;">
-                            <div id="plantListContainer"></div>
-                            <ul class="nav"><li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li></ul>
-                            <br />
-                            <br />
-                        </ul>
+                    <h4>All:</h4>
+                    <ul class="nav nav-pills nav-stacked" style="font-size: 15px;">
+                        <li id="plantListContainer"></li>
+                        <li><a href="#">Plant A
+                                <button onclick="" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:3px;">&nbsp;</button></a></li>
+                        <li>
+                            <ul class="nav"><li><button onclick="location.href='http:/google.com/'" class="glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;">&nbsp;</button><a href="broken.html"> Dank Weed, 90%THC, strong stuff </a></li></ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <!--...........................................................................Side bar ends here..........................................................................-->
