--- a/client/controlpanel/allplants.html
+++ b/client/controlpanel/allplants.html
@@ -43,33 +43,37 @@
             xhr.send();
             //var plantname = JSON.parse(xhr.response)[0].name;
         </script>
-        <!--Begin NavBar-->
+        <!--navbar-->
         <nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">
             <div class="container-fluid">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#TheNavBar">
-                                    <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                        <a class="navbar-brand" href="dashboard.html">PlantPi</a>
-                    </div>
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#TheNavBar">
+                        <span class="icon-bar">&nbsp;</span>
+                        <span class="icon-bar">&nbsp;</span>
+                        <span class="icon-bar">&nbsp;</span>
+                    </button>
+                    <a class="navbar-brand" href="dashboard.html">PlantPi</a>
+                </div>
+                <!--Allow for better compatability when resizing-->
+                <div class="collapse navbar-collapse" id="TheNavBar">
+                    <ul class="nav navbar-nav navbar-right">
+                        <!--Username-->
+                        <li><a><span id="usernameRenderTarget" class="glyphicon glyphicon-user"</span></a></li>
 
-                    <!--Allow for better compatability when resizing-->
-                    <div class="collapse navbar-collapse" id="TheNavBar">
-                        <ul class="nav navbar-nav navbar-right">
-                                   <li> <a href="dashboard.html"><span class="glyphicon glyphicon-arrow-left"></span> Go Back</a></li>
-                                   <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Signout</a></li>
-                                   <li><a id="Leaf"><span class="glyphicon glyphicon-leaf"></span></a></li>
+                        <li><a href="dashboard.html"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>Go back</a></li>
+                        <li><a href="index.html"><span class="glyphicon glyphicon-log-out">&nbsp;</span>Signout</a></li>
+                        <li><a id="Leaf"><span class="glyphicon glyphicon-leaf">&nbsp;</span></a></li>
 
-                                <div id="Easter" class="EasterEgg">
-                            <div class="EasterEgg-content">
+                        <li><div id="Easter" class="EasterEgg">
+                                <div class="EasterEgg-content">
                                     <span class="close">&times;</span>
-                                    <img src="http://harry.enzoverder.be/cats/funny-pictures-kitten-plant-innocen-face.jpg" width="80%" height="80%"></img>
+                                    <img src="https://www.askideas.com/media/39/Yes-Human-Plant-For-Your-Rabbit-Overlords-Funny-Rabbit-Meme-Image.jpg" width="80%" height="80%">
+                                    <p style="color:white" >Its a feature :)</p>
                                 </div>
-                        </div>
+                            </div>
+                        </li>
                     </ul>
-                 </div>
+                </div>
             </div>
         </nav>
         <script> //because i was bored EASTEREGG
@@ -107,6 +111,7 @@
                     </ul>
                 </div>
             </div>
+            <div id="expandedPlantContainer"></div>
         </div>
         <script src="dist/bundle.js"></script>
     </body>
