--- a/client/controlpanel/settings.html
+++ b/client/controlpanel/settings.html
@@ -26,7 +26,7 @@
         				}
         				return "";
     			}
-    			
+
     			function hex2a(hexx) {
  				var hex = hexx.toString();
 				var str = '';
@@ -42,34 +42,38 @@
 			//var plantname = JSON.parse(xhr.response)[0].name;
 		</script>
 		<!--Begin NavBar-->
-		<nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">
-			<div class="container-fluid">
-	    			<div class="navbar-header">
-	    				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#TheNavBar"
-					            	<span class="icon-bar"></span>
-					           	<span class="icon-bar"></span>
-					           	<span class="icon-bar"></span>
-				        	</button>
-	     				<a class="navbar-brand" href="dashboard.html">PlantPi</a>
-	    			</div>
+        <nav class="navbar navbar-inverse bg-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#TheNavBar">
+                        <span class="icon-bar">&nbsp;</span>
+                        <span class="icon-bar">&nbsp;</span>
+                        <span class="icon-bar">&nbsp;</span>
+                    </button>
+                    <a class="navbar-brand" href="dashboard.html">PlantPi</a>
+                </div>
+                <!--Allow for better compatability when resizing-->
+                <div class="collapse navbar-collapse" id="TheNavBar">
+                    <ul class="nav navbar-nav navbar-right">
+                        <!--Username-->
+                        <li><a><span id="usernameRenderTarget" class="glyphicon glyphicon-user"</span></a></li>
 
-	    			<!--Allow for better compatability when resizing-->
-	    			<div class="collapse navbar-collapse" id="TheNavBar">
-		    			<ul class="nav navbar-nav navbar-right">
-					               <li> <a href="dashboard.html"><span class="glyphicon glyphicon-arrow-left"></span> Go Back</a></li>
-					               <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Signout</a></li>
-					               <li><a id="Leaf"><span class="glyphicon glyphicon-leaf""></span></a></li>
+                        <li><a href="dashboard.html"><span class="glyphicon glyphicon-arrow-left">&nbsp;</span>Go back</a></li>
+                        <li><a href="index.html"><span class="glyphicon glyphicon-log-out">&nbsp;</span>Signout</a></li>
+                        <li><a id="Leaf"><span class="glyphicon glyphicon-leaf">&nbsp;</span></a></li>
 
-					         	<div id="Easter" class="EasterEgg">
-							<div class="EasterEgg-content">
-						    		<span class="close">&times;</span>
-						    		<img src="http://harry.enzoverder.be/cats/funny-pictures-kitten-plant-innocen-face.jpg" width="80%" height="80%"></img>
-						    	</div>
-						</div>
-				 	</ul>
-				 </div>
-			</div>
-		</nav>
+                        <li><div id="Easter" class="EasterEgg">
+                                <div class="EasterEgg-content">
+                                    <span class="close">&times;</span>
+                                    <img src="https://www.askideas.com/media/39/Yes-Human-Plant-For-Your-Rabbit-Overlords-Funny-Rabbit-Meme-Image.jpg" width="80%" height="80%">
+                                    <p style="color:white" >Its a feature :)</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 		<script> //because i was bored EASTEREGG
 			var EasterEgg = document.getElementById("Easter");
 			var Leaf = document.getElementById("Leaf");
@@ -91,10 +95,10 @@
 
 		<br/><br/><br/><br/>
 
-		<!--The settings container, currently doesn't do anything other than show forms
-		and send a confirm alert upon button press--> 
+		<!--The settings container, currently doesnt do anything other than show forms
+		and send a confirm alert upon button press-->
 		<div class="container">
-			<h1><span class="glyphicon glyphicon-cog"></span>  Settings for <strong>"Maple"</strong></h1>
+			<h1><span class="glyphicon glyphicon-cog"></span>&nbsp;General Settings</h1>
 			<p>Here you can change various settings for your PlantPi environment.</p>
 			<div class="container">
 				<br/>
@@ -113,11 +117,6 @@
 						</div>
 						<button id="savebutton" type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button>
 
-						<!--currently doesn't do anything-->
-						<div id="confirm_txt" class="confirm_text">
-							<p>Changes Successfully saved</p>
-						</div>
-
 						<br/>
 					</div>
 				</form>
@@ -126,9 +125,22 @@
 						<br/>
 						<p>Account Infomation</p>
 					</div>
-					<div class="subform">
-						<div class="form-group">
+					<div class="subform" action="">
+                        <p>Email Infomation</p>
+                        <div class="form-group">
+                                <label for="cur_password">Email Address</label>
+                                <input type="text" class="form-control" id="email_address" placeholder="plantpi_is_awesome27@gmail.com">
+                        </div>
+                </form>
+                <form action="#" method="post">
+                        <hr/>
+                        <p>Password Infomation</p>
+                        <div class="form-group">
 						    	<label for="cur_password">Current Password</label>
+						    	<input type="text" class="form-control" id="cur_password" placeholder="">
+						</div>
+						<div class="form-group">
+						    	<label for="cur_password">Re-enter Password</label>
 						    	<input type="text" class="form-control" id="cur_password" placeholder="">
 						</div>
 						<div class="form-group">
@@ -140,7 +152,7 @@
 						    	<input type="text" class="form-control" id="verify_password" placeholder="">
 						</div>
 						<button id="savebutton" type="submit" class="btn btn-primary" onclick="confirm_mes()">Save Settings</button><br/>
-					</div>	
+					</div>
 				</form>
 				<br/>
 			</div>
